[package]
name = "gb-checker"
version = "0.3.0"
authors = ["Entenjaeger2 <entenjaeger_2@gmx.de>"]
edition = "2018"

[features]
default = []
dynamic-data = ["rustc-serialize", "regex"]

[dependencies]
chrono = "0.4"
rustc-serialize = { version ="0.3", optional = true}
regex = { version = "1", optional = true}
serde = { version = "1.0.89", features = ["derive"] }
serde_json = "1.0"
webbrowser = "0.5.5"
[dependencies.winapi]
version = "0.3" 
features = ["winuser"]
